# haskell-fri-proofs

./: .hlint.yaml  ChangeLog.md  cabal.project  flake.nix  fri-proofs.cabal  stack.yaml  stark-anatomy.cabal
src/: Die.hs
src/Plonk/: Arithmetization.hs  Example.hs  FFT.hs  Transcript.hs
src/Plonk/Types/: Circuit.hs  Fin.hs  Vect.hs  Z2.hs
src/Stark/: BinaryTree.hs  Cast.hs  FiniteField.hs  Fri.hs  FriIOP.hs  Hash.hs  MerkleTree.hs  MultivariatePolynomial.hs  Prelude.hs  UnivariatePolynomial.hs
src/Stark/Fri/: Types.hs
src/Stark/Types/: AuthPath.hs  BinaryTree.hs  CapCommitment.hs  CapLength.hs  Commitment.hs  FiatShamir.hs  Index.hs  Leaf.hs  MerkleHash.hs  MultivariatePolynomial.hs  Scalar.hs  UnivariatePolynomial.hs  Variable.hs
test/: Spec.hs
test/Spec/: Gen.hs  Prelude.hs
test/Spec/Plonk/: Circuit.hs
test/Spec/Stark/: Fri.hs  FriSpec.hs  MerkleTreeSpec.hs  ScalarSpec.hs  UnivariatePolynomialSpec.hs
