cabal-version: 2.4
name:          fri-proofs
version:       0.1.0.0
license:
license-files: LICENSE
author:        Orbis Labs
maintainer:    morgan.thomas@platonic.systems

library
  exposed-modules:
    Plonk.Arithmetization
    Plonk.Types.Circuit
    Plonk.Types.Fin
    Stark.BinaryTree
    Stark.FiniteField
    Stark.Fri
    Stark.Fri.Types
    Stark.Hash
    Stark.MerkleTree
    Stark.MultivariatePolynomial
    Stark.Prelude
    Stark.Types.AuthPath
    Stark.Types.BinaryTree
    Stark.Types.CapCommitment
    Stark.Types.CapLength
    Stark.Types.Commitment
    Stark.Types.Index
    Stark.Types.MerkleHash
    Stark.Types.MultivariatePolynomial
    Stark.Types.Scalar
    Stark.Types.UnivariatePolynomial
    Stark.Types.Variable
    Stark.UnivariatePolynomial

  build-depends:
    , base                >=4.9 && <5
    , blake2
    , bytestring
    , containers
    , extra
    , finite-field
    , generic-lens
    , lens
    , listsafe
    , polynomial-algebra
    , serialise
    , vinyl

  hs-source-dirs:     src
  default-language:   GHC2021
  ghc-options:
    -Weverything -Wno-all-missed-specialisations -Wno-implicit-prelude
    -Wno-missing-safe-haskell-mode -Wno-prepositive-qualified-module
    -Wno-safe -Wno-unsafe

  default-extensions:
    DataKinds
    DeriveFunctor
    DeriveGeneric
    DerivingStrategies
    GADTs
    GeneralisedNewtypeDeriving
    StandaloneDeriving
    StandaloneKindSignatures

test-suite spec
  type:             exitcode-stdio-1.0
  main-is:          Spec.hs
  other-modules:
    Spec.Gen
    Spec.Prelude
    Spec.Stark.FriSpec
    Spec.Stark.MerkleTreeSpec
    Spec.Stark.UnivariatePolynomialSpec

  build-tools:      sydtest-discover >=0
  build-depends:
    , base                       >=4.9 && <5
    , blake2
    , bytestring
    , containers
    , extra
    , finite-field
    , fri-proofs
    , generic-lens
    , genvalidity
    , genvalidity-sydtest
    , genvalidity-sydtest-aeson
    , hedgehog
    , lens
    , listsafe
    , polynomial-algebra
    , QuickCheck
    , serialise
    , sydtest
    , sydtest-discover
    , validity

  hs-source-dirs:   test
  default-language: GHC2021
  ghc-options:
    -Weverything -Wno-all-missed-specialisations -Wno-implicit-prelude
    -Wno-missing-safe-haskell-mode -Wno-prepositive-qualified-module
    -Wno-safe -Wno-unsafe -threaded -rtsopts -with-rtsopts=-N
