cabal-version:      2.4
name:               fri-proofs
version:            0.1.0.0
license: NONE
license-files: LICENSE
author:        Orbis Labs
maintainer:    morgan.thomas@platonic.systems

library
  exposed-modules:
    Stark.BinaryTree
    Stark.FiniteField
    Stark.Fri
    Stark.Fri.Types
    Stark.Hash
    Stark.MerkleTree
    Stark.Prelude
    Stark.MultivariatePolynomial
    Stark.UnivariatePolynomial
    Stark.Types.AuthPath
    Stark.Types.BinaryTree
    Stark.Types.CapCommitment
    Stark.Types.CapLength
    Stark.Types.Commitment
    Stark.Types.Index
    Stark.Types.MerkleHash
    Stark.Types.MultivariatePolynomial
    Stark.Types.Scalar
    Stark.Types.UnivariatePolynomial
    Stark.Types.Variable

  build-depends:
    base >= 4.9 && < 5,
    blake2,
    bytestring,
    containers,
    extra,
    finite-field,
    generic-lens,
    lens,
    listsafe,
    polynomial-algebra,
    serialise,
    basement >= 0.0.15,

  hs-source-dirs: src
  default-language: GHC2021
  ghc-options:
    -Wall -Werror -Wcompat -fwarn-redundant-constraints -fwarn-incomplete-uni-patterns
    -fwarn-tabs -fwarn-incomplete-record-updates -fwarn-identities -Wmissing-export-lists


test-suite spec
  type: exitcode-stdio-1.0
  main-is: Spec.hs

  other-modules:
    Spec.Gen
    Spec.Prelude
    Spec.Stark.FriSpec
    Spec.Stark.MerkleTreeSpec
    Spec.Stark.UnivariatePolynomialSpec

  build-tools: sydtest-discover

  build-depends:
    base >= 4.9 && < 5,
    blake2,
    bytestring,
    containers,
    extra,
    finite-field,
    generic-lens,
    genvalidity,
    genvalidity-sydtest,
    genvalidity-sydtest-aeson,
    hedgehog,
    lens,
    listsafe,
    polynomial-algebra,
    QuickCheck,
    serialise,
    sydtest,
    sydtest-discover,
    validity,

    fri-proofs

  hs-source-dirs: test
  default-language: Haskell2010
  ghc-options:
          -Wall -Werror -Wcompat -fwarn-redundant-constraints -fwarn-incomplete-uni-patterns
          -fwarn-tabs -fwarn-incomplete-record-updates -fwarn-identities -Wmissing-export-lists
          -threaded -rtsopts -with-rtsopts=-N
