cabal-version: 2.4
name:          fri-proofs
version:       0.0.0.2
license:
license-files: LICENSE
author:        Orbis Labs
maintainer:    morgan.thomas@platonic.systems

common globals
  default-language:   GHC2021
  default-extensions:
    DataKinds
    DerivingStrategies
    GADTs
    TypeFamilies

  ghc-options:
    -Weverything -Wno-all-missed-specialisations -Wno-implicit-prelude
    -Wno-missing-safe-haskell-mode -Wno-prepositive-qualified-module
    -Wno-safe -Wno-unsafe

library
  import:             globals
  exposed-modules:
    Plonk.Arithmetization
    Plonk.Example
    Plonk.FFT
    Plonk.Types.Circuit
    Plonk.Types.Fin
    Plonk.Types.Vect
    Plonk.Types.Z2
    Stark.BinaryTree
    Stark.FiniteField
    Stark.Fri
    Stark.Fri.Types
    Stark.Hash
    Stark.MerkleTree
    Stark.MultivariatePolynomial
    Stark.Prelude
    Stark.Types.AuthPath
    Stark.Types.BinaryTree
    Stark.Types.CapCommitment
    Stark.Types.CapLength
    Stark.Types.Commitment
    Stark.Types.Index
    Stark.Types.MerkleHash
    Stark.Types.MultivariatePolynomial
    Stark.Types.Scalar
    Stark.Types.UnivariatePolynomial
    Stark.Types.Variable
    Stark.UnivariatePolynomial

  build-depends:
    , base                >=4.9 && <5
    , blake2
    , bytestring
    , containers
    , extra
    , finite-field
    , generic-lens
    , groups
    , lens
    , listsafe
    , polynomial-algebra
    , serialise
    , vinyl

  hs-source-dirs:     src
  default-extensions:
    DataKinds
    DerivingStrategies
    GADTs
    TypeFamilies

test-suite spec
  import:         globals
  type:           exitcode-stdio-1.0
  main-is:        Spec.hs
  other-modules:
    Spec.Gen
    Spec.Plonk.Circuit
    Spec.Prelude
    Spec.Stark.FriSpec
    Spec.Stark.MerkleTreeSpec
    Spec.Stark.UnivariatePolynomialSpec

  build-depends:
    , base                >=4.9 && <5
    , bytestring
    , containers
    , fri-proofs
    , generic-lens
    , hedgehog
    , lens
    , polynomial-algebra
    , QuickCheck
    , tasty
    , tasty-hedgehog
    , vinyl

  hs-source-dirs: test
  ghc-options:    -threaded -rtsopts -with-rtsopts=-N
