cabal-version:      2.4
name:               stark-anatomy
version:            0.1.0.0
license: NONE
license-files: LICENSE
author:        Orbis Labs
maintainer:    morgan.thomas@platonic.systems

library
  exposed-modules:
    Stark.BinaryTree
    Stark.FiniteField
    Stark.MerkleTree
    Stark.UnivariatePolynomial
    Stark.Types.AuthPath
    Stark.Types.BinaryTree
    Stark.Types.Commitment
    Stark.Types.Leaf
    Stark.Types.MerkleHash
    Stark.Types.MultivariatePolynomial
    Stark.Types.Scalar
    Stark.Types.UnivariatePolynomial

  build-depends:
    base >= 4.9 && < 5,
    blake2,
    bytestring,
    containers,
    finite-field,
    polynomial-algebra,
    serialise

  hs-source-dirs: src
  default-language: Haskell2010
  ghc-options:
          -Wall -Werror -Wcompat -fwarn-redundant-constraints -fwarn-incomplete-uni-patterns
          -fwarn-tabs -fwarn-incomplete-record-updates -fwarn-identities -Wmissing-export-lists
          -threaded -rtsopts -with-rtsopts=-N
